--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "d3-array": "^2.12.0",
+    "d3-ease": "^2.0.0",
     "d3-interpolate": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-move": "^6.4.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
