--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "d3-array": "^2.12.0",
     "d3-ease": "^2.0.0",
     "d3-interpolate": "^2.0.1",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha-v3": "^1.9.0",
+    "react-hook-form": "^7.0.7",
     "react-modal-video": "^1.2.6",
     "react-move": "^6.4.0",
     "react-router-dom": "^5.2.0",
